chapter 3: code generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,15 @@ else ()
 	add_compile_options(-Wall -Wextra -Wpedantic -Wshadow -Wnon-virtual-dtor)
 endif ()
 
+set(CMAKE_PREFIX_PATH /usr/local/opt/llvm)
+
+find_package(LLVM REQUIRED CONFIG)
+message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+
+include_directories(${LLVM_INCLUDE_DIRS})
+add_definitions(${LLVM_DEFINITIONS})
+llvm_map_components_to_libnames(LLVM_LIBRARIES core)
+
 set(SOURCES
 	src/main.cpp
 	src/kaleidoscope/lexer.cpp
@@ -16,3 +25,5 @@ set(SOURCES
 	src/kaleidoscope/compiler.cpp)
 
 add_executable(kaleidoscope ${SOURCES})
+
+target_link_libraries(kaleidoscope ${LLVM_LIBRARIES})
